--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -4,6 +4,8 @@ Version ????? (tzdata v?????) - ???????????
 * period_for_local and local_to_utc now allow resolution of ambiguous
   times (e.g. when switching from daylight savings to standard time). Thanks
   to Cliff Matthews for the suggestion.
+* Added require 'date' to timezone.rb (date isn't loaded by default in all
+  environments).
 
 Version 0.0.4 (tzdata v2005m) - 18-Sep-2005
 -------------------------------------------
