--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+Version 0.1.x (tzdata v?????) - ???????????
+-------------------------------------------
+
+* Timezones that are defined by a single unbounded period (e.g. UTC) now 
+  work again.  
+
 Version 0.1.0 (tzdata v2005n) - 27-Nov-2005
 -------------------------------------------
 
