--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,5 +1,5 @@
-Version 0.?.? (tzdata v2006a) - ???????????
--------------------------------------------
+Version 0.1.2 (tzdata v2006a) - 5-Feb-2006
+------------------------------------------
 
 * Add lib directory to the load path when tzinfo is required. Makes it easier
   to use tzinfo gem when unpacked to vendor directory in rails. 
@@ -10,8 +10,8 @@ Version 0.?.? (tzdata v2006a) - ???????????
 * Return a better error when attempting to use a Timezone instance that was
   constructed with Timezone.new(nil). This will occur when using Rails'
   composed_of. When the timezone identifier in the database is null, attempting
-  to use the Timezone will now result in a UnknownTimezone exception rather than
-  a NameError.
+  to use the Timezone will now result in an UnknownTimezone exception rather 
+  than a NameError.
 
 
 Version 0.1.1 (tzdata v2005q) - 18-Dec-2005
