Updated to tzdata version 2006c.

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -17,6 +17,9 @@ Version 0.?.? (tzdata v?????) - ??????????
 * Omit unnecessary quotes in zone identifier symbols.
 * Omit the final transition to DST if there is a prior transition in the last
   year processed to standard time.
+* Updated to tzdata version 2006c
+  (http://article.gmane.org/gmane.comp.time.tz/920).
+
 
 Version 0.1.2 (tzdata v2006a) - 5-Feb-2006
 ------------------------------------------
