Updating to tzdata version 2006d.

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -8,26 +8,28 @@ Version ?.?.? (tzdata v?????) - ??????????
   temporary TimeOrDateTime to be converted that would subsequently be 
   discarded. This change brings the performance of Timezone.local_to_utc
   and Timezone.period_for_local back to the level it was at in 0.1.2. Thanks to
-  Michael Smedberg for reporting these performance issues.
+  Michael Smedberg and Jamis Buck for reporting these performance issues.
 * Fix the condition that is tested by TimezonePeriodList.periods_for_local to
   avoid iterating back through the Timezone periods once all the possible 
   periods have been found. The condition was only being evaluated for cases 
   where multiple periods were defined in one half of the year. This change 
   improves the performance of Timezone.local_to_utc and 
   Timezone.period_for_local to the same level as Timezone.utc_to_local and
-  Timezone.period_for_utc. Thanks to Michael Smedberg for reporting these 
-  performance issues.
+  Timezone.period_for_utc. Thanks to Michael Smedberg and Jamis Buck for 
+  reporting these performance issues.
+* Added abbreviation as an alias for TimezonePeriod.zone_identifier.
+* Updated to tzdata version 2006d
+  (http://article.gmane.org/gmane.comp.time.tz/936).
 * Ignore any offset in DateTimes passed in. The zone of Times is already 
   ignored. All of the following now refer to the same UTC time (15:40 on 
   17 April 2006). Previously, the second line would have been interpreted 
   as 20:40.
   
-  tz.utc_to_local(DateTime.new(2006, 4, 17, 15, 40, 0))
-  tz.utc_to_local(DateTime.new(2006, 4, 17, 15, 40, 0).new_offset(Rational(5, 24)))
-  tz.utc_to_local(Time.utc(2006, 4, 17, 15, 40, 0))
-  tz.utc_to_local(Time.local(2006, 4, 17, 15, 40, 0))
-* Added abbreviation as an alias for TimezonePeriod.zone_identifier.
-  
+    tz.utc_to_local(DateTime.new(2006, 4, 17, 15, 40, 0))
+    tz.utc_to_local(DateTime.new(2006, 4, 17, 15, 40, 0).new_offset(Rational(5, 24)))
+    tz.utc_to_local(Time.utc(2006, 4, 17, 15, 40, 0))
+    tz.utc_to_local(Time.local(2006, 4, 17, 15, 40, 0))
+
 
 Version 0.2.0 (tzdata v2006c) - 3-Apr-2006
 ------------------------------------------
