--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -5,8 +5,8 @@
   them. This allows Timezone instances to be used with Marshal.dump and 
   Marshal.load and hence allows them to be stored in Rails sessions. 
   Closes #4240.
-* Updated to tzdata version 2006f
-  (http://article.gmane.org/gmane.comp.time.tz/1001).
+* Updated to tzdata version 2006g
+  (http://article.gmane.org/gmane.comp.time.tz/1008).
 * Country index data is now defined in a single module that is independent
   of the Country class implementation.
 * Country instances can now be used with Marshal.dump and Marshal.load (#4240).
