--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -37,6 +37,10 @@
   incorrect abbreviation issue with Europe/London, Europe/Dublin and 
   Pacific/Auckland.
 * Eliminating unnecessary .nil? calls to give a minor performance gain.
+* Timezone.all and Timezone.all_identifiers now return all the 
+  Timezones/identifiers rather than just those associated with countries. #4146.
+* Added all_data_zones, all_data_zone_identifiers, all_linked_zones and
+  all_linked_zone_identifiers class methods to Timezone.
 
 
 == Version 0.2.1 (tzdata v2006d) - 17-Apr-2006
