--- a/tzinfo/README
+++ b/tzinfo/README
@@ -6,23 +6,34 @@ daylight-savings aware transformations between times in different timezones.
 This is the same database as used for zoneinfo on Unix machines.
 
 The tz database has been imported (using TZDataParser) and turned into a set of
-Ruby classes (which are packaged with this release).
+Ruby modules (which are packaged with this release).
 
 
 == Example usage
 
-To convert a time in UTC, to a local time in the America/New_York timezone, you
+To convert a time in UTC to a local time in the America/New_York timezone, you
 can do the following:
 
   require_gem 'tzinfo'
   include TZInfo
   
   tz = Timezone.get('America/New_York')
-  local = tz.utc_to_local(DateTime.new(2005,8,29,15,35,0))
+  local = tz.utc_to_local(Time.utc(2005,8,29,15,35,0))
+
+Note that the Time returned will look like it is UTC (Time.zone will return 
+"UTC"). This is because it is not currently possible to change the offset of 
+an individual Time instance.
   
-To convert from a local time to UTC, the local_to_utc method can be used:
+To convert from a local time to UTC, the local_to_utc method can be used. 
 
   utc = tz.local_to_utc(local)
+
+Note that the timezone information of the time you pass in is ignored. The
+following two lines will return the same result regardless of the local 
+timezone:
+
+  tz.local_to_utc(Time.local(2006,6,26,1,0,0))
+  tz.local_to_utc(Time.utc(2006,6,26,1,0,0))
   
 To get information about the rules in force at a particular UTC or local time,
 the Timezone.period_for_utc and Timezone.period_for_local methods can be used.
@@ -39,12 +50,18 @@ passed.
 You can get the current local time in a Timezone with the Timezone.now method:
 
   now = tz.now
+
+All methods in TZInfo that take a time can be used with either Time, DateTime
+or Integers (Time#to_i). The return type will be the same as the type passed in.
   
 You can also access Timezones by Country (ISO 3166 country code). The following 
 gets all the Timezone identifiers for the US:
 
   us = Country.get('US')
   timezones = us.zone_identifiers
+  
+The zone_info method of Country provides an additional description and
+location for each Timezone in the Country.
   
 The above covers the most common uses of Timezone and Country. For more detail,
 see the API documentation for the individual classes.
