--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -2,6 +2,8 @@
 
 * Remove colon from case statements to avoid warning in Ruby 1.8.5. #5198.
 * Use temporary variable to avoid dynamic string warning from rdoc.
+* Updated to tzdata version 2006j
+  (http://article.gmane.org/gmane.comp.time.tz/1175).
 
 
 == Version 0.3.0 (tzdata v2006g) - 17-Jul-2006
