--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?.?.? (tzdata v?????) - ???????????
+== Version 0.3.1 (tzdata v2006j) - 21-Aug-2006
 
 * Remove colon from case statements to avoid warning in Ruby 1.8.5. #5198.
 * Use temporary variable to avoid dynamic string warning from rdoc.
