--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
 == Version ?.?.? (tzdata v?????) - ???????????
 
-* Updated to tzdata version 2006l
-  (http://article.gmane.org/gmane.comp.time.tz/1218).
+* Updated to tzdata version 2006m
+  (http://article.gmane.org/gmane.comp.time.tz/1275).
 
 == Version 0.3.1 (tzdata v2006j) - 21-Aug-2006
 
