--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,10 @@
 == Version ?.?.? (tzdata v?????) - ???????????
 
-* Updated to tzdata version 2006m
-  (http://article.gmane.org/gmane.comp.time.tz/1275).
+* Updated to tzdata version 2006n
+  (http://article.gmane.org/gmane.comp.time.tz/1288). Note that this release of
+  tzdata removes the country Serbia and Montenegro (CS) and replaces it with
+  separate Serbia (RS) and Montenegro (ME) entries.
+
 
 == Version 0.3.1 (tzdata v2006j) - 21-Aug-2006
 
