--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?.?.? (tzdata v?????) - ???????????
+== Version 0.3.2 (tzdata v2006n) - 11-Oct-2006
 
 * Updated to tzdata version 2006n
   (http://article.gmane.org/gmane.comp.time.tz/1288). Note that this release of
