--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?.?.? (tzdata v?????) - ???????????
+
+* Updated to tzdata version 2006o
+  (http://article.gmane.org/gmane.comp.time.tz/1329).
+
+
 == Version 0.3.2 (tzdata v2006n) - 11-Oct-2006
 
 * Updated to tzdata version 2006n
