Updated to tzdata version 2006p (http://article.gmane.org/gmane.comp.time.tz/1358).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
 == Version ?.?.? (tzdata v?????) - ???????????
 
-* Updated to tzdata version 2006o
-  (http://article.gmane.org/gmane.comp.time.tz/1329).
+* Updated to tzdata version 2006p
+  (http://article.gmane.org/gmane.comp.time.tz/1358).
 
 
 == Version 0.3.2 (tzdata v2006n) - 11-Oct-2006
