--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?.?.? (tzdata v?????) - ???????????
+== Version 0.3.3 (tzdata v2006p) - 27-Nov-2006
 
 * Updated to tzdata version 2006p
   (http://article.gmane.org/gmane.comp.time.tz/1358).
