Updated to tzdata version 2007a (http://article.gmane.org/gmane.comp.time.tz/1448).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?.?.? (tzdata v2007a) - ???????????
+
+* Updated to tzdata version 2007a
+  (http://article.gmane.org/gmane.comp.time.tz/1448).
+
+
 == Version 0.3.3 (tzdata v2006p) - 27-Nov-2006
 
 * Updated to tzdata version 2006p
