--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?.?.? (tzdata v2007a) - ???????????
+== Version ?.?.? (tzdata v2007b) - ???????????
 
-* Updated to tzdata version 2007a
-  (http://article.gmane.org/gmane.comp.time.tz/1448).
+* Updated to tzdata version 2007b
+  (http://article.gmane.org/gmane.comp.time.tz/1492).
 
 
 == Version 0.3.3 (tzdata v2006p) - 27-Nov-2006
