--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?.?.? (tzdata v2007b) - ???????????
+== Version ?.?.? (tzdata v2007c) - ???????????
 
-* Updated to tzdata version 2007b
-  (http://article.gmane.org/gmane.comp.time.tz/1492).
+* Updated to tzdata version 2007c
+  (http://article.gmane.org/gmane.comp.time.tz/1510).
 
 
 == Version 0.3.3 (tzdata v2006p) - 27-Nov-2006
