Updated to tzdata version 2007d (http://article.gmane.org/gmane.comp.time.tz/1559).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?.?.? (tzdata v2007c) - ???????????
+== Version ?.?.? (tzdata v2007d) - ???????????
 
-* Updated to tzdata version 2007c
-  (http://article.gmane.org/gmane.comp.time.tz/1510).
+* Updated to tzdata version 2007d
+  (http://article.gmane.org/gmane.comp.time.tz/1559).
 
 
 == Version 0.3.3 (tzdata v2006p) - 27-Nov-2006
