Updated to tzdata version 2007e (http://article.gmane.org/gmane.comp.time.tz/1584).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?.?.? (tzdata v2007d) - ???????????
+== Version ?.?.? (tzdata v2007e) - ???????????
 
-* Updated to tzdata version 2007d
-  (http://article.gmane.org/gmane.comp.time.tz/1559).
+* Updated to tzdata version 2007e
+  (http://article.gmane.org/gmane.comp.time.tz/1584).
 
 
 == Version 0.3.3 (tzdata v2006p) - 27-Nov-2006
