--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?.?.? (tzdata v2007f) - ???????????
+== Version ?.?.? (tzdata v2007g) - ???????????
 
-* Updated to tzdata version 2007f
-  (http://article.gmane.org/gmane.comp.time.tz/1646).
+* Updated to tzdata version 2007g
+  (http://article.gmane.org/gmane.comp.time.tz/1810).
 
 
 == Version 0.3.3 (tzdata v2006p) - 27-Nov-2006
