--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?.?.? (tzdata v2007g) - ???????????
+== Version 0.3.4 (tzdata v2007g) - 21-Aug-2007
 
 * Updated to tzdata version 2007g
   (http://article.gmane.org/gmane.comp.time.tz/1810).
