Updated to tzdata version 2007j (http://article.gmane.org/gmane.comp.time.tz/1991).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
 == Version ?.?.? (tzdata v?????) - ??????????
 
-* Updated to tzdata version 2007i
-  (http://article.gmane.org/gmane.comp.time.tz/1912).
+* Updated to tzdata version 2007j
+  (http://article.gmane.org/gmane.comp.time.tz/1991).
 
 
 == Version 0.3.5 (tzdata v2007h) - 1-Oct-2007
