--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?.?.? (tzdata v2008a) - ??????????
+
+* Updated to tzdata version 2008a
+  (http://article.gmane.org/gmane.comp.time.tz/2071).
+
+
 == Version 0.3.6 (tzdata v2007k) - 1-Jan-2008
 
 * Updated to tzdata version 2007k
