--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?.?.? (tzdata v2008a) - ??????????
+== Version 0.3.7 (tzdata v2008a) - 10-Mar-2008
 
 * Updated to tzdata version 2008a
   (http://article.gmane.org/gmane.comp.time.tz/2071).
