Updated to tzdata version 2008b (http://article.gmane.org/gmane.comp.time.tz/2149).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?.?.? (tzdata v2008b) - ???????????
+
+* Updated to tzdata version 2008b
+  (http://article.gmane.org/gmane.comp.time.tz/2149).
+
+
 == Version 0.3.7 (tzdata v2008a) - 10-Mar-2008
 
 * Updated to tzdata version 2008a
