--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?.?.? (tzdata v2008b) - ???????????
+== Version 0.3.8 (tzdata v2008b) - 24-Mar-2008
 
 * Updated to tzdata version 2008b
   (http://article.gmane.org/gmane.comp.time.tz/2149).
