--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?.?.? (tzdata v?????) - ???????????
+== Version 0.3.9 (tzdata v2008c) - 27-May-2008
 
 * Updated to tzdata version 2008c
   (http://article.gmane.org/gmane.comp.time.tz/2183).
