Updated to tzdata version 2008d (http://article.gmane.org/gmane.comp.time.tz/2229).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?.?.? (tzdata v?????) - ??????????
+
+* Updated to tzdata version 2008c
+  (http://article.gmane.org/gmane.comp.time.tz/2229).
+
+
 == Version 0.3.9 (tzdata v2008c) - 27-May-2008
 
 * Updated to tzdata version 2008c
