Fix tzdata version in CHANGES.

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,6 +1,6 @@
 == Version ?.?.? (tzdata v?????) - ??????????
 
-* Updated to tzdata version 2008c
+* Updated to tzdata version 2008d
   (http://article.gmane.org/gmane.comp.time.tz/2229).
 
 
