Updated to tzdata version 2008f (http://article.gmane.org/gmane.comp.time.tz/2229).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
 == Version ?.?.? (tzdata v?????) - ??????????
 
-* Updated to tzdata version 2008d
-  (http://article.gmane.org/gmane.comp.time.tz/2229).
+* Updated to tzdata version 2008f
+  (http://article.gmane.org/gmane.comp.time.tz/2293).
 
 
 == Version 0.3.9 (tzdata v2008c) - 27-May-2008
