--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?.?.? (tzdata v?????) - ??????????
+== Version 0.3.10 (tzdata v2008f) - 16-Sep-2008
 
 * Updated to tzdata version 2008f
   (http://article.gmane.org/gmane.comp.time.tz/2293).
