Updated to tzdata version 2008g (http://article.gmane.org/gmane.comp.time.tz/2335).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,5 +1,7 @@
 == Version ?.?.? (tzdata v?????) - ???????????
 
+* Updated to tzdata version 2008g
+  (http://article.gmane.org/gmane.comp.time.tz/2335).
 * Rational.new! has now been removed in Ruby 1.9. Only use Rational.new!
   if it is available (it is preferable in Ruby 1.8 for performance
   reasons). Thanks to Jeremy Kemper and Pratik Naik for spotting this.
