Updated to tzdata version 2008i (http://article.gmane.org/gmane.comp.time.tz/2440).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
 == Version ?????? (tzdata v?????) - ??????????
 
-* Updated to tzdata version 2008h
-  (http://article.gmane.org/gmane.comp.time.tz/2377).
+* Updated to tzdata version 2008i
+  (http://article.gmane.org/gmane.comp.time.tz/2440).
 
 
 == Version 0.3.11 (tzdata v2008g) - 7-Oct-2008
