--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v?????) - ??????????
+== Version 0.3.12 (tzdata v2008i) - 12-Nov-2008
 
 * Updated to tzdata version 2008i
   (http://article.gmane.org/gmane.comp.time.tz/2440).
