Updated to tzdata version 2009e (http://article.gmane.org/gmane.comp.time.tz/2650).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version 0.3.?? (tzdata v2009d) - ???????????
+== Version 0.3.?? (tzdata v2009e) - ???????????
 
-* Updated to tzdata version 2009d
-  (http://article.gmane.org/gmane.comp.time.tz/2616).
+* Updated to tzdata version 2009e
+  (http://article.gmane.org/gmane.comp.time.tz/2650).
 
 
 == Version 0.3.12 (tzdata v2008i) - 12-Nov-2008
