--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version 0.3.?? (tzdata v2009f) - ???????????
+== Version 0.3.13 (tzdata v2009f) - 15-Apr-2009
 
 * Updated to tzdata version 2009f
   (http://article.gmane.org/gmane.comp.time.tz/2668).
